# bevy_fps

./: Cargo.toml  README.md
src/: camera.rs  main.rs
